--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/infra/http/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@prisma/config": "^7.2.0",
     "@types/node": "^25.0.3",
     "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@prisma/client": "^7.2.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "fastify": "^5.6.2",
+    "zod": "^4.2.1"
   }
 }
