--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "devDependencies": {
     "@prisma/config": "^7.2.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^25.0.3",
     "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
@@ -20,7 +21,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "zod": "^4.2.1"
