--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,28 @@ version: "3.8"
 
 services:
   database:
-    image: postgres:15-alpine
-    container_name: iam_postgres
-    restart: always
-
+    image: bitnami/postgresql:latest
     ports:
       - "5432:5432"
-
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      - POSTGRESQL_USERNAME=docker
+      - POSTGRESQL_PASSWORD=docker
+      - POSTGRESQL_DATABASE=iam_db
+    networks:
+      - iam-network
 
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+  api:
+    build: .
+    ports:
+      - "3333:3333"
+    environment:
+      - DATABASE_URL=postgresql://docker:docker@database:5432/iam_db?schema=public
+      - JWT_SECRET=sua-chave-secreta-aqui
+    depends_on:
+      - database
+    networks:
+      - iam-network
 
-volumes:
-  postgres_data:
+networks:
+  iam-network:
+    driver: bridge
