--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   },
   "dependencies": {
     "@fastify/jwt": "^10.0.0",
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-type-provider-zod": "^6.1.0",
     "zod": "^4.2.1"
   }
 }
