--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vitest": "^4.0.16"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^10.0.0",
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
