--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DATABASE_URL="postgresql://user:password@localhost:5432/dbname?schema=public"
+PORT=3333
+NODE_ENV=dev
+JWT_SECRET="insira-seu-segredo-aqui"
+DATABASE_URL="postgresql://zedamanga:randompassword@localhost:5432/mydb?schema=public"
